# photo-app

./: .env.example  .env.railway.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  railway.toml
.github/workflows/: ghcr-all.yml  ghcr.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  comments.py  photos.py  upload.py
backend/app/services/: email.py  image.py  storage.py
backend/scripts/: migrate.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.vue  router.ts
frontend/src/api/: auth.ts  client.ts  comments.ts  photos.ts
frontend/src/components/comments/: CommentForm.vue  CommentList.vue
frontend/src/components/photos/: PhotoCard.vue  PhotoGrid.vue
frontend/src/components/ui/: AppHeader.vue
frontend/src/stores/: auth.ts  comments.ts  photos.ts
frontend/src/styles/: main.css
frontend/src/types/: comment.ts  photo.ts  user.ts
frontend/src/views/: FeedView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  PhotoDetailView.vue  ProfileView.vue  RegisterView.vue  UploadView.vue  UserProfileView.vue  VerifyEmailView.vue
nginx/: nginx.conf
scripts/: deploy-railway.sh  push-to-ghcr.sh
